cmake_minimum_required(VERSION 3.15)
project(bishi)

set(CMAKE_CXX_STANDARD 14)

add_executable(O033 O033.cpp)
add_executable(L0077 L0077.cpp)
add_executable(L0811 L0811.cpp)
add_executable(L1315 L1315.cpp)
add_executable(L1305 L1305.cpp)
add_executable(L0046 L0046.cpp)
add_executable(L0023 L0023.cpp L0094.cpp)
add_executable(L0090 L0090.cpp)
add_executable(L0078 L0078.cpp)
add_executable(L0076 L0076.cpp)
add_executable(L0094 L0094.cpp)
add_executable(L0054 L0054.cpp)
add_executable(L0058 L0058.cpp)
add_executable(L0067 L0067.cpp)
add_executable(L0007 L0007.cpp)
